--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -2,8 +2,9 @@
   width: 100%;
   max-width: 2000px;
   position: relative;
-  padding-top: 45%;
+  padding-top: 50%;
   background-color: #FFF;
+  z-index: 2;
 }
 
 .this-inner-container {
@@ -12,7 +13,7 @@
   left: 10%;
   background-color:aqua;
   width: 80%;
-  height: 85%;
+  height: 80%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
@@ -53,7 +54,7 @@
 }
 
 .this-about-title {
-  width: 40%;
+  width: 300px;
   border-bottom: 1px solid #13293d;
   font-size: 46px;
   font-weight: 100;
