--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,52 +1,41 @@
 .this-container-about {
   width: 100%;
-  max-width: 2000px;
+  height: 100%;
+  min-height: 680px;
   position: relative;
-  padding-top: 50%;
-  background-color: #FFF;
-  z-index: 2;
+  background-color: rgba(0, 100, 148, 0.2);
 }
 
 .this-inner-container {
   position: absolute;
   top: 10%;
-  left: 10%;
-  background-color:aqua;
-  width: 80%;
+  background-color:  transparent;
+  width: 90%;
   height: 80%;
+  left: 5%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-
-  border-radius: 13px;
-  background: #ffffff;
-  box-shadow: -21px 21px 63px #878787,
-              21px -21px 63px #ffffff;
 }
 
 .this-photo-about {
-  width:40%;
-  height: 100%;
-  background-color: #13293d;
-  border-radius: 13px 0 0 13px;
-  position: relative;
-
-}
-
-.this-img-about {
-  background-image: url(../../Images/about-1.png);
-  background-color: transparent;
+  width: 40%;
+  min-width: 300px;
+  height: 80%;
+  min-height: 300px;
+  background-image: url(../../Images/about-1.jpg);
   background-size: 100% 100%;
-  width: 100%;
-  padding-top: 110%;
-  position: absolute;
-  top: 100%;
-  left: 60%;
-  transform: translate(-50%, -100%);
+  border-radius: 20px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-box-shadow: 10px 13px 34px -11px rgba(19,41,61,1);
+  -moz-box-shadow: 10px 13px 34px -11px rgba(19,41,61,1);
+  box-shadow: 10px 13px 34px -11px rgba(19,41,61,1);
 }
 
 .this-text-about {
-  width:60%;
+  width: 60%;
   height: 100%;
   display: flex;
   flex-wrap: nowrap;
@@ -55,7 +44,7 @@
 
 .this-about-title {
   width: 300px;
-  border-bottom: 1px solid #13293d;
+  border-bottom: 1px solid #13293d;;
   font-size: 46px;
   font-weight: 100;
   color: #13293d;
@@ -80,7 +69,7 @@
 .about-btn {
   background-color: #13293d;
   width: 200px;
-  height: 60px;
+  height: 50px;
   border-radius:40px;
   margin-top: 60px;
   margin-bottom: 30px;
@@ -88,12 +77,13 @@
   cursor: pointer;
   transition: 1s;
   color: white;
-  left: 100%;
-  transform: translatex(-118%);
+  left: 80%;
+  transform: translatex(-50%);
 }
 
 .about-btn:hover {
   background-color: #006494;
+  color: white;
   transition: 1s;
 }
 
@@ -101,7 +91,6 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-right: -50%;
   transform: translate(-50%, -50%);
   font-size: 20px;
   font-weight: 300;
