--- a/src/pages/pages-CSS/titleHeader.css
+++ b/src/pages/pages-CSS/titleHeader.css
@@ -5,7 +5,8 @@
     position: absolute;
     top: calc(40% - 70px);
     left: 10%;
-    z-index: 4;
+    z-index: 6;
     width: 90%;
     height: 70px;
+    text-transform: uppercase;
 }
