--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -95,3 +95,9 @@
   font-size: 20px;
   font-weight: 300;
 }
+
+@media screen and (max-width: 1320px) {
+  .this-inner-container {
+    width: 90%;
+  }
+}
