--- a/src/pages/pages-CSS/about.css
+++ b/src/pages/pages-CSS/about.css
@@ -1,8 +1,7 @@
 .this-page-about-container {
   width: 100%;
-  height: 100%;
   max-width: 2000px;
-  position: absolute;
+  position: relative;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -12,7 +11,6 @@
   padding: 4%;
   background-color: #e8f1f2;
   position: relative;
-  top: 40%;
 }
 
 .this-page-about-contents {
@@ -22,7 +20,6 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  height: 1400px;
   position: relative;
 }
 
@@ -36,19 +33,15 @@
 }
 
 .this-page-about-cards {
-  height: 28%;
-  padding: 2%;
+  padding: 20px 4%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  position: relative;
 }
 
 .this-page-about-card {
   width: 33%;
-  height: 90%;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
   margin: 0 auto;
 }
 
