--- a/src/pages/pages-CSS/services.css
+++ b/src/pages/pages-CSS/services.css
@@ -1,8 +1,7 @@
 .this-page-services-container {
   width: 100%;
-  height: 100%;
   max-width: 2000px;
-  position: absolute;
+  position: relative;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -12,7 +11,6 @@
   padding: 4%;
   background-color: #e8f1f2;
   position: relative;
-  top: 40%;
 }
 
 .this-page-services-contents {
@@ -22,7 +20,6 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  height: 2700px;
   position: relative;
 }
 
