--- a/src/pages/pages-CSS/titleHeader.css
+++ b/src/pages/pages-CSS/titleHeader.css
@@ -3,7 +3,7 @@
     font-weight: 300;
     color: #e8f1f2;
     position: absolute;
-    top: calc(40% - 70px);
+    top: 180px;
     left: 10%;
     z-index: 6;
     width: 90%;
