--- a/src/pages/pages-CSS/contact.css
+++ b/src/pages/pages-CSS/contact.css
@@ -20,7 +20,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  height: 630px;
   position: relative;
 }
 
@@ -87,7 +86,7 @@
 
 .this-page-contact-form-btn {
   position: relative;
-  left: 50%;
+  float: right;
   padding: 2% 6%;
   background-color: #13293d;
   color: #e8f1f2;
@@ -112,9 +111,25 @@
   height: 550px;
   border-radius: 30px;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: black;
   overflow: hidden;
   border: 2px solid #13293d;
+}
+
+@media screen and (max-width: 900px) {
+  .this-page-contact-contents {
+    flex-direction: column;
+  }
+
+  .this-page-contact-form {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .this-page-contact-map {
+    width: 90%;
+    top: 0;
+    height: 400px;
+    transform: translateY(0);
+    margin: 0 auto;
+  }
 }
