--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,17 +1,14 @@
 .this-container-about {
   width: 100%;
-  height: 100%;
-  min-height: 680px;
+  padding: 2%;
   position: relative;
   background-color: rgba(0, 100, 148, 0.2);
 }
 
 .this-inner-container {
-  position: absolute;
-  top: 10%;
+  position: relative;
   background-color:  transparent;
   width: 90%;
-  height: 80%;
   left: 5%;
   display: flex;
   flex-wrap: nowrap;
@@ -21,14 +18,13 @@
 .this-photo-about {
   width: 40%;
   min-width: 300px;
-  height: 80%;
   min-height: 300px;
   background-image: url(../../Images/about-1.jpg);
   background-size: 100% 100%;
   border-radius: 20px;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 100%;
+  transform: translateY(0);
   -webkit-box-shadow: 10px 13px 34px -11px rgba(19,41,61,1);
   -moz-box-shadow: 10px 13px 34px -11px rgba(19,41,61,1);
   box-shadow: 10px 13px 34px -11px rgba(19,41,61,1);
@@ -36,10 +32,10 @@
 
 .this-text-about {
   width: 60%;
-  height: 100%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
+  position: relative;
 }
 
 .this-about-title {
@@ -54,8 +50,8 @@
 }
 
 .this-about-text {
-  width: 100%;
-  overflow: hidden;
+  width: calc(100% - 30px);
+  margin-left: 30px;
 }
 
 .this-about-text p {
@@ -63,31 +59,31 @@
   color: #13293d;
   font-size: 18px;
   font-weight: 300;
-  margin: 30px 8%;
+  margin: 30px 2px;
 }
 
-.about-btn {
+.this-about-btn {
   background-color: #13293d;
   width: 200px;
   height: 50px;
   border-radius:40px;
-  margin-top: 60px;
   margin-bottom: 30px;
-  position: relative;
   cursor: pointer;
   transition: 1s;
   color: white;
-  left: 80%;
-  transform: translatex(-50%);
+  position: relative;
+  left: 100%;
+  transform: translateX(-100%);
+
 }
 
-.about-btn:hover {
+.this-about-btn:hover {
   background-color: #006494;
   color: white;
   transition: 1s;
 }
 
-.about-btn p {
+.this-about-btn p {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -97,7 +93,15 @@
 }
 
 @media screen and (max-width: 1320px) {
-  .this-inner-container {
-    width: 90%;
+  .this-text-about {
+    width: 100%;
+  }
+  .this-about-text {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .this-photo-about {
+    display: none;
   }
 }
