--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,63 +1,103 @@
 .this-container-footer {
-    width: 100%;
-    height: 320px;
-    background-color: #13293d;
-    position: relative;
-    display: flex;
-    padding: 7%;
+  width: 100%;
+  background-color: #13293d;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 4%;
 }
 
 .this-footer-logo {
-    width: 40%;
-    height: 100px;
-    background-image: url(../../Images/logo.png);
-    background-size: 100% 100%;
+  width: 50%;
 }
 
-.this-footer-contact{
-    width: 50%;
-    height: 200px;
-    margin-left: 250px;
-    border-left: 3px solid #e8f1f2;
-    color: #e8f1f2;
-    padding: 30px 30px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+.this-footer-logo-img {
+  width: 50%;
+  min-width: 300px;
+  height: 25%;
+  min-height: 150px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+  background-image: url(../../Images/logo.png);
+  background-size: 100% 100%;
+}
+
+this-footer-container-contact {
+  width: 50%;
+}
+
+.this-footer-contact {
+  width: 100%;
+  border-left: 3px solid #e8f1f2;
+  color: #e8f1f2;
+  padding: 30px 30px;
+  position: relative;
 }
 
 .this-footer-address,
 .this-footer-phone,
 .this-footer-mail {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    font-size: 17px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  font-size: 17px;
 }
 
 .this-footer-content-icon {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .this-footer-address p,
 .this-footer-phone p,
 .this-footer-mail p {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .this-container-sub-footer {
-    width: 100%;
-    height: 80px;
-    background-color: #13293d;
-    color: #e8f1f2;
-    font-size: 15px;
-    font-weight: 100;
-    padding: 2%;
-    text-align: center;
+  width: 100%;
+  height: 80px;
+  background-color: #13293d;
+  color: #e8f1f2;
+  font-size: 15px;
+  font-weight: 100;
+  padding: 2%;
+  text-align: center;
 }
 
 .this-container-sub-footer a{
-    font-size: 20px;
-    color: #e8f1f2;
-    margin-left: 10px;
+  font-size: 20px;
+  color: #e8f1f2;
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 800px) {
+  .this-container-footer {
+    flex-direction: column;
+  }
+
+  .this-footer-logo {
+    width: 100%;
+  }
+
+  .this-footer-logo-img {
+    position: relative;
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(0 , 0);
+    margin: 0 auto;
+  }
+
+  .this-footer-container-contact {
+    margin: 20px auto 10px auto;
+  }
+
+  .this-footer-contact {
+    border-left: none;
+    border-top: 3px solid #e8f1f2;
+    width: 100%;
+  }
 }
