--- a/src/Components/Request-Contact/request-contact.css
+++ b/src/Components/Request-Contact/request-contact.css
@@ -1,28 +1,29 @@
 .this-container-request-contact {
-    background-color: white;
-    width: 100%;
-    height: 200px;
-    text-align: center;
-    line-height: 200px;
-    position: relative;
+  background-color: white;
+  width: 100%;
+  padding: 4%;
+  text-align: center;
+
+  position: relative;
 }
 
 .this-container-request-contact p {
-    font-size: 35px;
-    font-weight: 500;
-    color: #13293d;
+  width: 100%;
+  font-size: 35px;
+  font-weight: 500;
+  color: #13293d;
 }
 
 .this-request-contact-btn {
-    color: #13293d;
-    font-size: 60px;
-    margin-left: 30px;
+  color: #13293d;
+  font-size: 60px;
+  margin-left: 30px;
 }
 
 .this-request-contact-btn {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .this-request-contact-btn:hover {
-    color: #247ba0;
+  color: #247ba0;
 }
