--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -4,6 +4,7 @@
   padding-top: 50%;
   position: relative;
   padding: 4%;
+  overflow: hidden;
 }
 
 .this-services-title {
@@ -18,7 +19,7 @@
 }
 
 .this-container-for-4 {
-  width: 80%;
+  width: 100%;
   min-width: 900px;
   display: flex;
   flex-wrap: nowrap;
@@ -122,7 +123,10 @@
   display: none;
 }
 
-@media screen and (max-width: 1320px) {
+@media screen and (max-width: 1130px) {
+  .this-services-for-scroll {
+    overflow: scroll;
+  }
   .this-container-for-4 {
     
   }
