--- a/src/pages/pages-CSS/about.css
+++ b/src/pages/pages-CSS/about.css
@@ -48,10 +48,7 @@
 .this-page-about-icon {
   font-size: 60px;
   color: #13293d;
-  position: relative;
-  top: 20%;
-  left: 30%;
-  transform: translate(-50% , -50%);
+  margin-right: 15px;
 }
 
 .this-page-about-card h5 {
@@ -59,9 +56,7 @@
   font-weight: 400;
   color: #13293d;
   position: relative;
-  top: 0;
-  left: 93%;
-  transform: translate(-50% , -50%);
+  text-align: center;
 }
 
 .this-page-about-card p {
@@ -70,5 +65,16 @@
   padding: 20px 30px;
   text-align: center;
   position: relative;
- 
+}
+
+@media screen and (max-width: 1000px) {
+  .this-page-about-cards {
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 0;
+  }
+
+  .this-page-about-card {
+    width: 100%;
+  }
 }
