--- a/src/pages/pages-CSS/services.css
+++ b/src/pages/pages-CSS/services.css
@@ -4,6 +4,7 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
+  overflow: hidden;
 }
 
 .this-page-services-container-content {
@@ -14,7 +15,7 @@
 }
 
 .this-page-services-contents {
-  width:87%;
+  width: 87%;
   background-color: #e8f1f2;
   margin: 0 auto;
   display: flex;
@@ -25,12 +26,12 @@
 
 .this-page-services-content {
   width: 100%;
-  height: 250px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   position: relative;
   margin-top: 100px;
+  align-items: center;
 }
 
 .this-page-services-img {
@@ -38,7 +39,10 @@
   background-size: 100% 100%;
   width: 25%;
   height: 100%;
+  min-height: 250px;
   border-radius: 25%;
+  position: relative;
+
 }
 
 .this-page-services-content:nth-of-type(1){
@@ -77,10 +81,10 @@
 
 .this-page-services-text {
   width: 75%;
-  height: 100%;
-  padding: 4%;
+  padding: 2%;
   text-align: left;
   position: relative;
+
 }  
 
 .this-page-services-text h3 {
@@ -89,16 +93,40 @@
   color: #13293d;
   border-bottom: 2px solid #13293d;
   position: relative;
-  top: -40px;
   margin-bottom: 15px;
 }
 
 .this-page-services-text p {
   position: relative;
-  top: calc(50% - 20px);
-  left: 50%;
-  transform: translate(-50% ,-50%);
   color: #13293d;
   font-size: 18px;
   font-weight: 100;
+}
+
+@media screen and (max-width: 1007px) {
+  .this-page-services-content {
+    flex-direction: column;
+  }
+
+  .this-page-services-content:nth-of-type(2),
+  .this-page-services-content:nth-of-type(4),
+  .this-page-services-content:nth-of-type(6) {
+  flex-direction: column;
+} 
+
+  .this-page-services-img {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .this-page-services-text {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .this-page-services-img {
+    width: 70%;
+  }
 }
