--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -124,15 +124,29 @@
 }
 
 @media screen and (max-width: 1130px) {
-  .this-services-for-scroll {
-    overflow: scroll;
+  .this-services-for-8 {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 30px;
   }
   .this-container-for-4 {
-    
+    flex-direction: column;
+    width: 50%;
+    min-width: 0;
+    margin: 0 auto;
   }
 
   .this-services-content {
+    margin: 20px auto;
     min-width: 190px;
+    margin-top: 20px;
+  }
+
+  .this-services-content:nth-of-type(1) {
+    margin: 0 auto;
+    margin-top: 0;
   }
 
   .this-services-content h3 {
