--- a/src/Components/Slide/slide.css
+++ b/src/Components/Slide/slide.css
@@ -8,7 +8,7 @@
 .this-opacity{
     padding-top: 47.5%;
     width: 100%;
-    min-height: 600px;
+    height: 600px;
     background-color: rgba(19, 41, 61, 0.9);
     position: absolute;
     z-index: 1;
@@ -17,7 +17,7 @@
 .carouselItem {
     padding-top: 47.5%;
     width: 100%;
-    min-height: 600px;
+    height: 600px;
     background-size: 100% 100%;
 }
 
@@ -41,6 +41,7 @@
     transform: translateX(-13%);
     padding: 10px;
     position: relative;
+    transition: 1s;
 }
 
 .this-text h3 {
