--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -46,29 +46,29 @@ Nav.this-actived {
 }
 
 .this-navLink-btn {
-  width: 170px;
-  height: 40px;
+  width: 152px;
+  height: 35px;
   border-radius: 40px;
   background-color: transparent;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   text-decoration: none;
   color: #fff;
   display: flex;
   align-items: center;
   text-decoration: none;
   padding: 0 1rem;
-  font-size: 18px;
+  font-size: 16px;
   transition: 500ms;
-  margin-top: 20px;
+  margin-top: 22px;
 }
 
 .this-navLink-btn-2 {
-  width: 206px;
+  width: 185px;
   margin-left: 10px;
 }
 
 .this-navLink-btn:hover {
-  border: 2px solid #1b98e0;
+  border: 1px solid #1b98e0;
   transition: 500ms;
   color: #1b98e0 !important;
 }
@@ -77,7 +77,7 @@ Nav.this-actived {
   z-index: 9;
   margin-top: 3px;
   margin-bottom: 2px;
-  width: 300px;
+  width: 250px;
   height: 75px;
   background-image: url("../../Images/logo.png");
   background-repeat: no-repeat;
@@ -166,11 +166,16 @@ Nav.this-actived {
 }
 
 @media screen and (max-width: 1320px) {
+  .this-img {
+    width: 200px;
+    height: 60px;
+    margin-left: -40px;
+  }
   .this-bars {
     display: block;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 10px;
     transform: translate(-50%, 40%);
     font-size: 1.8rem;
     cursor: pointer;
@@ -178,5 +183,13 @@ Nav.this-actived {
   }
   .this-nav-menu {
     display: none;
+  }
+
+  .this-navLink-btn p {
+    margin: 0 auto;
+  }
+
+  .this-navLink-btn-2 {
+    margin-left: 0;
   }
 }
