--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -123,9 +123,10 @@
   display: none;
 }
 
-@media screen and (max-width: 1130px) {
+@media screen and (max-width: 1100px) {
   .this-services-for-8 {
-    width: 100%;
+    width: 50%;
+    margin: 30px auto;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -140,17 +141,35 @@
 
   .this-services-content {
     margin: 20px auto;
-    min-width: 190px;
-    margin-top: 20px;
+    min-width: 180px;
   }
 
   .this-services-content:nth-of-type(1) {
     margin: 0 auto;
     margin-top: 0;
+    margin-bottom: 20px;
   }
 
   .this-services-content h3 {
     font-size: 14px;
     min-width: 190px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .this-services-for-8 {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .this-services-for-8 {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .this-services-for-8 {
+    width: 100%;
   }
 }
