--- a/src/pages/pages-CSS/contact.css
+++ b/src/pages/pages-CSS/contact.css
@@ -59,7 +59,7 @@
 .this-page-contact-form-imput {
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: 20px;
   font-family: 'Roboto', sans-serif;
   border-radius: 25px;
   font-weight: 300;
@@ -115,21 +115,54 @@
   border: 2px solid #13293d;
 }
 
+.this-page-contact-map-routes {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 999;
+  background-color: #247ba0;
+  color: #e8f1f2;
+  text-align: center;
+  line-height: 50px;
+  font-size: 22px;
+  font-weight: 300;
+  transition: 1s;
+}
+
+.this-page-contact-map-routes:hover {
+  text-decoration: none;
+  color: #e8f1f2;
+  background-color: #1b98e0;
+  transition: 1s;
+}
+
+.this-page-contact-map-routes-icon {
+  font-size: 30px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  color: #e8f1f2;
+}
+
 @media screen and (max-width: 900px) {
   .this-page-contact-contents {
     flex-direction: column;
   }
 
   .this-page-contact-form {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
   }
 
   .this-page-contact-map {
     width: 90%;
     top: 0;
-    height: 400px;
+    height: 300px;
     transform: translateY(0);
     margin: 0 auto;
+  }
+
+  .this-page-contact-map-routes {
+    font-size: 18px;
   }
 }
