update error slide

--- a/src/Components/Slide/slide.css
+++ b/src/Components/Slide/slide.css
@@ -6,6 +6,7 @@
 }
 
 .this-opacity{
+    padding-top: 47.5%;
     width: 100%;
     height: 700px;
     background-color: rgba(19, 41, 61, 0.9);
@@ -14,6 +15,7 @@
 }
 
 .carouselItem {
+    padding-top: 47.5%;
     width: 100%;
     height: 700px;
     background-size: 100% 100%;
@@ -31,7 +33,7 @@
 }
 
 .this-text {
-    margin-top: 800px;
+
     margin-bottom: 70px;
     margin-left: 20px;
     max-width: 50%; 
