--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -56,6 +56,16 @@
   margin-left: 20px;
 }
 
+.this-footer-social  a:first-of-type {
+  margin-left: 44px;
+}
+
+.this-footer-social  a {
+  text-decoration: none;
+  color: #e8f1f2;
+  margin-right: 20px;
+}
+
 .this-container-sub-footer {
   width: 100%;
   height: 80px;
