--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -171,6 +171,7 @@ Nav.this-actived {
     height: 60px;
     margin-left: -40px;
   }
+
   .this-bars {
     display: block;
     position: absolute;
@@ -181,6 +182,7 @@ Nav.this-actived {
     cursor: pointer;
     height: 80%;
   }
+
   .this-nav-menu {
     display: none;
   }
@@ -191,5 +193,11 @@ Nav.this-actived {
 
   .this-navLink-btn-2 {
     margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .this-img {
+    margin-left: -30px;
   }
 }
