--- a/src/Components/News/news.css
+++ b/src/Components/News/news.css
@@ -24,7 +24,6 @@
 
 .this-slide-news {
     background-color: transparent;
-    height: 450px;
     min-width: 320px;
     padding: 6%;
 }
@@ -32,7 +31,6 @@
 .this-content-news {
   width: 100%;
   min-width: 270px;
-  height: 430px;
   background-color: #e8f1f2;
   border-radius: 2px;
   display: flex;
@@ -43,6 +41,7 @@
 .this-news-content-img {
   width: 100%;
   height: 35%;
+  min-height: 200px;
   background-image: url(../../Images/news-img.jpg);
   background-size: 100% 100%;
 }
@@ -117,11 +116,39 @@
 }
 
 @media screen and (max-width: 500px) {
+  .this-news-title {
+    width: 250px;
+    font-size: 40px;
+  }
   .this-content-news {
+    min-width: 100px;
     padding: 0 10px;
   }
 
   .this-news-content-title {
     font-size: 17px;
+  }
+
+  .this-container-news {
+    margin: 0 auto;
+  }
+
+  .this-container-news-slide {
+    margin-bottom: 10%;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .this-container-news {
+    padding: 1%;
+}
+  .this-container-news-slide {
+    width: 280px !important;
+    margin: 0 auto;
+    margin-bottom: 10%;
+  }
+
+  .this-slide-news {
+    margin-left: -20px;
   }
 }
