--- a/src/pages/pages-CSS/news.css
+++ b/src/pages/pages-CSS/news.css
@@ -143,7 +143,7 @@
     transform: translateX(-50%);
   }
   .this-page-news-content-title{
-    font-size: 19px;
+    font-size: 17px;
   }
 
   .this-page-news-content {
@@ -154,5 +154,14 @@
 @media screen and (max-width: 600px) {
   .this-page-news-content {
     width: 100%;
+  }
+
+  .this-page-news-content-title{
+    font-size: 14px;
+  }
+
+  .this-page-news-content-text {
+    font-size: 13px;
+    text-align: justify;
   }
 }
